--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>NOR FAZELIN BINTI MOHD ZAINI</title>
+	<link rel="stylesheet" type="styles.css" href="">
 </head>
 <body>
-<h1>in headings</h1>
+	<section>
+		
+
+	</section class="header">
+
+
+
+
+
 </body>
 </html>
