--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>NOR FAZELIN BINTI MOHD ZAINI</title>
+	<title>FAZELIN ZAINI</title>
 </head>
 <body>
+	<h1>NOR FAZELIN BINTI MOHD ZAINI</h1>
+	<p>My Contents</p>
 
 </body>
 </html>
