--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>FAZELIN ZAINI</title>
+	<link rel="stylesheet" type="styles.css" href="">
 </head>
 <body>
-	<h1>NOR FAZELIN BINTI MOHD ZAINI</h1>
-	<p>My Contents</p>
+	<section class="header">
+		
+	</section>
+
 
 </body>
 </html>
