--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>FAZELIN ZAINI</title>
-	<link rel="stylesheet" type="styles.css" href="">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<section class="header">
