--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>FAZELIN ZAINI</title>
+	<title>Header</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<section class="header">
+	<div id="nav">
+		<h1><a href="index.html">Cool Coder</a></h1>
+		<ul>
+			<li><a href="home.html">Home</a></li>
+			<li><a href="contactus.html">Contact Us</a></li>
+			<li><a href="aboutus.html">About Us</a></li>
+			<li><a href="portfolio">Portfolio</a></li>
+		</ul>
 		
-	</section>
-
+	</div>
 
 </body>
 </html>
