--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Header</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet"
 </head>
 <body>
 	<div id="nav">
