--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>FazelinZaini</title>
+	<title>Header</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 <body>
 	<div id="nav">
-		<h1><a href="index.html">Cool Coder</a></h1>
+		<h1><a href="index.html">Nor Fazelin Binti Mohd Zaini</a></h1>
 		<ul>
 			<li><a href="home.html">Home</a></li>
 			<li><a href="contactus.html">Contact Us</a></li>
