--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Header</title>
+	<title>FazelinZaini</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
@@ -15,6 +15,7 @@
 			<li><a href="contactus.html">Contact Us</a></li>
 			<li><a href="aboutus.html">About Us</a></li>
 			<li><a href="portfolio">Portfolio</a></li>
+			<li><a href="experience">Experience</a></li>
 		</ul>
 		
 	</div>
