--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Luxurious+Roman&display=swap" rel="stylesheet">
 <body>
 	<div id="nav">
 		<h1><a href="index.html">Nor Fazelin Binti Mohd Zaini</a></h1>
 		<ul>
-			<li><a href="home.html">Home</a></li>
+			<li id="hello"><a href="home.html">Home</a></li>
 			<li><a href="contactus.html">Contact Us</a></li>
 			<li><a href="aboutus.html">About Us</a></li>
 			<li><a href="portfolio">Portfolio</a></li>
