--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<h1><a href="index.html">Nor Fazelin Binti Mohd Zaini</a></h1>
 		<ul>
 			<li id="hello"><a href="home.html">Home</a></li>
-			<li><a href="contactus.html">Contact Us</a></li>
-			<li><a href="aboutus.html">About Us</a></li>
-			<li><a href="portfolio">Portfolio</a></li>
-			<li><a href="experience">Experience</a></li>
+			<li><a href="biodata.html">Biodata</a></li>
+			<li><a href="experience.html">Experience</a></li>
+			<li><a href="gallery">Gallery</a></li>
+			<li><a href="contactme">Contact Me</a></li>
 		</ul>
 		
 	</div>
