--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Luxurious+Roman&display=swap" rel="stylesheet">
 <body>
+	<center>
+		<p></p>
+		<br>
+		<a href="index.html">
+			<img src="images/3.jpg" height="160" width="130">
+		</a>
+		<p>
+			<b>
+			<font color="white" size="20"> Fazelin Zaini </font>
+			</b>
+		</p>
+	</center>
+
 	<div id="nav">
 		<h1><a href="index.html">Nor Fazelin Binti Mohd Zaini</a></h1>
 		<ul>
