--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</a>
 		<p>
 			<b>
-			<font color="white" size="20"> Fazelin Zaini </font>
+			<font color="black" size="20"> Fazelin Zaini </font>
 			</b>
 		</p>
 	</center>
