--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p></p>
 		<br>
 		<a href="index.html">
-			<img src="images/3.jpg" height="160" width="130">
+			<img src="images/3.JPG" height="160" width="130">
 		</a>
 		<p>
 			<b>
