--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Luxurious+Roman&display=swap" rel="stylesheet">
 
 	<div id="nav">
-		<h1><a href="index.html">Nor Fazelin Binti Mohd Zaini</a></h1>
+		<h1><a href="index.html">Nor Fazelin Mohd Zaini</a></h1>
 		<ul>
 			<li id="hello"><a href="home.html">Home</a></li>
 			<li><a href="biodata.html">Biodata</a></li>
@@ -31,7 +31,7 @@
 		</a>
 		<p>
 			<b>
-			<font color="black" size="20"> Fazelin Zaini </font>
+			<font color="white" size="20"> Hola ! </font>
 			</b>
 		</p>
 	</center>
