--- a/index.html
+++ b/index.html
@@ -38,9 +38,25 @@
 	
 	</div>
 	<div id="hello2">
-		
-	</div>
 
+	</div>
+<div class="row">
+	<div class="leftcolum">
+		<div class="card">
+			<h2>
+				<u>KNOWING ME</u>
+			</h2>
+			<h5>Fazelin Zaini</h5>
+		</div>
+		<p>
+			<b>Independent Youngest Sister</b>
+		</p>
+		<p>
+			"Sometimes it just takes a little reminder that helps us to realize the incredible potential that lies within us. As a woman, you do not only provide the necessary essentials for life, but you also have the power to create life. Without you, the circle would be far from closed. Aside from that, the quote empowers you to be confident in becoming the strong woman you want to be. You are able to transform and to change, which allows you to leave all negativity behind. Don’t allow others to decide about your life, but instead seize the power that lies within you."
+		</p>
+		<p>“The power you have is to be the best version of yourself you can be, so you can create a better world.” ~ Ashley Rickards</p>
+	</div>
+</div>
 
 </body>
 </html>
