--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 		<a href="index.html">
 			<img src="images/3.JPG" height="250" width="300">
 		</a>
+		<p>
+			<b>
+				<font color="whitesmoke" size="18">HOLLA!</font>
+			</b>
+		</p>
 	</center>
+	<style type="text/css"></style>
 
 </body>
 </html>
