--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>HOME</title>
+	<title>FazelinZaini</title>
 </head>
 <body>
 	<center>
@@ -18,7 +18,19 @@
 			</b>
 		</p>
 	</center>
-	<style type="text/css"></style>
+	<style>
+		body {
+			min-height: 100vh;
+			width: 100%;
+			background-image: linear-gradient(rgba(137,137,137,0.7),rgba(137,137,137,0.7)),url(images?3.JPG);
+			background-repeat: no-repeat;
+			background-position: center;
+			background-attachment: fixed;
+			background-size: cover;
+			position: relative;
+		}
+	</style>
+	
 
 </body>
 </html>
