--- a/index.html
+++ b/index.html
@@ -30,7 +30,30 @@
 			position: relative;
 		}
 	</style>
-	
+	<br>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		body {
+			margin: 0;
+			font-family: Arial, Helvetica, sans-serif;
+		}
+		.topnav {
+			overflow: hidden;
+			background-color: darkkhaki;
+		}
+		.topnav a{
+			float: left;
+			color: white;
+			text-align: center;
+			padding: 12px 14px;
+			font-size: 16px;
+		}
+		.topnav a:hover {
+			border-right: 1px solid #bbb;
+			background-color: black;
+			color: white;
+		}
+	</style>
 
 </body>
 </html>
