--- a/index.html
+++ b/index.html
@@ -54,6 +54,44 @@
 			color: white;
 		}
 	</style>
+	<div class="topnav">
+		<a href="index.html">HOME</a>
+		<a href="biodata.html">BIODATA</a>
+		<a href="experience.html">EXPERIENCE</a>
+		<a href="gallery.html">GALLERY</a>
+		<a href="contactme.html">CONTECT ME</a>
+	</div>
+	<style>
+		* {
+			box-sizing: border-box;
+		}
+		body {
+			font-family: initial;
+			padding: 20px;
+			background: linear-gradient(rgba(137,137,137,0.7),rgba(137,137,137,0.7)),url(images/3.JPG);
+		}
+		.header {
+			padding: 5px;
+			font-size: 40px;
+			text-align: center;
+			background: none;
+		}
+		.leftcolumn {
+			float: left;
+			width: 75%;
+		}
+		.rightcolumn {
+			float: left;
+			width: 25%;
+			padding-left: 20px;
+		}
+		.fakeimg {
+			background-color: khaki;
+			width: 100%;
+			padding: 20px;
+
+		}
+	</style>
 
 </body>
 </html>
