--- a/index.html
+++ b/index.html
@@ -131,6 +131,15 @@
 					"The power we have is to be the best version of ourself we can be, so we can create a better world." ~ Ashley Rickards
 				</p>
 			</div>
+			<div class="card">
+				<h2>
+					<u> MY BACKBONE </u>
+				</h2>
+				<h5> My Beloved Parents</h5>
+				<img src="images/15.JPEG" height="400" width="300">
+				<img src="images/16.JPEG" height="400" width="300">
+				<img src="images/17.JPEG" height="400" width="300">
+			</div>
 		</div>
 		
 	</div>
