--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 					<u> MY BACKBONE </u>
 				</h2>
 				<h5> My Beloved Parents</h5>
-				<img src="images/15.JPEG" height="400" width="300">
-				<img src="images/16.JPEG" height="400" width="300">
-				<img src="images/17.JPEG" height="400" width="300">
+				<img src="images/15.jpeg" height="400" width="300">
+				<img src="images/16.jpeg" height="400" width="300">
+				<img src="images/17.jpeg" height="400" width="300">
 			</div>
 		</div>
 		
